--- a/style.css
+++ b/style.css
@@ -4,5 +4,6 @@
 }
 
 body{
-    background: linear-gradient(to right, #667db6);
+    background: linear-gradient(to right, #667db6, #0082c8,#0082c8,#667db6);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
