--- a/style.css
+++ b/style.css
@@ -31,3 +31,66 @@ body{
     font-size: 1.6em;
     color: #293251;
 }
+.notification{
+    background-color: #f8d7da;
+    display: none;
+}
+.notification p{
+
+    color: #721c24;
+    font-size: 1.2em;
+    margin: 0;
+    text-align: center;
+    padding: 10px;
+}
+
+.weather-container{
+    width: 300px;
+    height: 260px;
+    background-color: #f4f9ff;
+}
+
+.weather-icon{
+    width: 300px;
+    height: 128px; 
+
+}
+.weather-icon img{
+    display: block;
+    margin: 0 auto;
+}
+
+.temperature-value{
+    width: 300px;
+    height: 60px;
+}
+
+.temperature-value p{
+    padding: 0;
+    margin:0;
+    color: #293251;
+    font-size: 4em;
+    text-align: center
+}
+
+.temperature-value span{
+    color: #293251;
+    font-size: .5em;
+
+}
+
+.temperature-description p{
+    padding: 8px;
+    margin: 0;
+    color: #293251;
+    text-align: center;
+    font-size: 1.2em;
+}
+
+.location p{
+    margin: 0;
+    padding: 0;
+    color: #293251;
+    text-align: center;
+    font-size: .7em;
+}
